New API refrence for elastOS plugins

--- a/static/references/trinity_plugins/enums/didplugin.mnemoniclanguage.html
+++ b/static/references/trinity_plugins/enums/didplugin.mnemoniclanguage.html
@@ -229,6 +229,12 @@
 						<a href="../interfaces/didplugin.publickey.html" class="tsd-kind-icon">Public<wbr>Key</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../interfaces/didplugin.service.html" class="tsd-kind-icon">Service</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../interfaces/didplugin.servicebuilder.html" class="tsd-kind-icon">Service<wbr>Builder</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../interfaces/didplugin.verifiablecredential.html" class="tsd-kind-icon">Verifiable<wbr>Credential</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
