--- a/static/references/trinity_plugins/enums/walletplugin.crcproposaltrackingtype.html
+++ b/static/references/trinity_plugins/enums/walletplugin.crcproposaltrackingtype.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DriveType | Trinity Plugins API Reference</title>
+	<title>CRCProposalTrackingType | Trinity Plugins API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/hiveplugin.html">HivePlugin</a>
+					<a href="../modules/walletplugin.html">WalletPlugin</a>
 				</li>
 				<li>
-					<a href="hiveplugin.drivetype.html">DriveType</a>
+					<a href="walletplugin.crcproposaltrackingtype.html">CRCProposalTrackingType</a>
 				</li>
 			</ul>
-			<h1>Enumeration DriveType</h1>
+			<h1>Enumeration CRCProposalTrackingType</h1>
 		</div>
 	</div>
 </header>
@@ -74,9 +74,13 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#ipfs" class="tsd-kind-icon">IPFS</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#native" class="tsd-kind-icon">NATIVE</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#onedrive" class="tsd-kind-icon">ONEDRIVE</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#appropriation" class="tsd-kind-icon">appropriation</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#common" class="tsd-kind-icon">common</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#maxtype" class="tsd-kind-icon">max<wbr>Type</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#progress" class="tsd-kind-icon">progress</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#progressreject" class="tsd-kind-icon">progress<wbr>Reject</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#proposalleader" class="tsd-kind-icon">proposal<wbr>Leader</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltrackingtype.html#terminated" class="tsd-kind-icon">terminated</a></li>
 							</ul>
 						</section>
 					</div>
@@ -85,23 +89,51 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="ipfs" class="tsd-anchor"></a>
-					<h3>IPFS</h3>
-					<div class="tsd-signature tsd-kind-icon">IPFS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<a name="appropriation" class="tsd-anchor"></a>
+					<h3>appropriation</h3>
+					<div class="tsd-signature tsd-kind-icon">appropriation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;5</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="native" class="tsd-anchor"></a>
-					<h3>NATIVE</h3>
-					<div class="tsd-signature tsd-kind-icon">NATIVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+					<a name="common" class="tsd-anchor"></a>
+					<h3>common</h3>
+					<div class="tsd-signature tsd-kind-icon">common<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="onedrive" class="tsd-anchor"></a>
-					<h3>ONEDRIVE</h3>
-					<div class="tsd-signature tsd-kind-icon">ONEDRIVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<a name="maxtype" class="tsd-anchor"></a>
+					<h3>max<wbr>Type</h3>
+					<div class="tsd-signature tsd-kind-icon">max<wbr>Type<span class="tsd-signature-symbol">:</span> </div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="progress" class="tsd-anchor"></a>
+					<h3>progress</h3>
+					<div class="tsd-signature tsd-kind-icon">progress<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="progressreject" class="tsd-anchor"></a>
+					<h3>progress<wbr>Reject</h3>
+					<div class="tsd-signature tsd-kind-icon">progress<wbr>Reject<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="proposalleader" class="tsd-anchor"></a>
+					<h3>proposal<wbr>Leader</h3>
+					<div class="tsd-signature tsd-kind-icon">proposal<wbr>Leader<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="terminated" class="tsd-anchor"></a>
+					<h3>terminated</h3>
+					<div class="tsd-signature tsd-kind-icon">terminated<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -146,13 +178,13 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
 					</li>
-					<li class="current tsd-kind-module tsd-is-not-exported">
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
-					<li class=" tsd-kind-module tsd-is-not-exported">
+					<li class="current tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/walletplugin.html">Wallet<wbr>Plugin</a>
 					</li>
 				</ul>
@@ -162,50 +194,41 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="hiveplugin.drivetype.html" class="tsd-kind-icon">Drive<wbr>Type</a>
+						<a href="walletplugin.crcproposaltrackingtype.html" class="tsd-kind-icon">CRCProposal<wbr>Tracking<wbr>Type</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#ipfs" class="tsd-kind-icon">IPFS</a>
+								<a href="walletplugin.crcproposaltrackingtype.html#appropriation" class="tsd-kind-icon">appropriation</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#native" class="tsd-kind-icon">NATIVE</a>
+								<a href="walletplugin.crcproposaltrackingtype.html#common" class="tsd-kind-icon">common</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#onedrive" class="tsd-kind-icon">ONEDRIVE</a>
+								<a href="walletplugin.crcproposaltrackingtype.html#maxtype" class="tsd-kind-icon">max<wbr>Type</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltrackingtype.html#progress" class="tsd-kind-icon">progress</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltrackingtype.html#progressreject" class="tsd-kind-icon">progress<wbr>Reject</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltrackingtype.html#proposalleader" class="tsd-kind-icon">proposal<wbr>Leader</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltrackingtype.html#terminated" class="tsd-kind-icon">terminated</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../classes/hiveplugin.clientcreationoptions.html" class="tsd-kind-icon">Client<wbr>Creation<wbr>Options</a>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="walletplugin.crcproposaltype.html" class="tsd-kind-icon">CRCProposal<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="walletplugin.votetype.html" class="tsd-kind-icon">Vote<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.client.html" class="tsd-kind-icon">Client</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.files.html" class="tsd-kind-icon">Files</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.hivemanager.html" class="tsd-kind-icon">Hive<wbr>Manager</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.ipfs.html" class="tsd-kind-icon">IPFS</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.ipfsclientcreationoptions.html" class="tsd-kind-icon">IPFSClient<wbr>Creation<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.keyvalues.html" class="tsd-kind-icon">Key<wbr>Values</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.onedriveclientcreationoptions.html" class="tsd-kind-icon">One<wbr>Drive<wbr>Client<wbr>Creation<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/hiveplugin.html#int" class="tsd-kind-icon">Int</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter tsd-is-not-exported">
-						<a href="../modules/hiveplugin.html#opaque" class="tsd-kind-icon">Opaque</a>
+						<a href="../interfaces/walletplugin.walletmanager.html" class="tsd-kind-icon">Wallet<wbr>Manager</a>
 					</li>
 				</ul>
 			</nav>
