--- a/static/references/trinity_plugins/interfaces/cordova.html
+++ b/static/references/trinity_plugins/interfaces/cordova.html
@@ -178,10 +178,16 @@
 						<a href="notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
+						<a href="statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="window.html" class="tsd-kind-icon">Window</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="../globals.html#media" class="tsd-kind-icon">Media</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="../globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="../globals.html#device" class="tsd-kind-icon">device</a>
