--- a/static/references/trinity_plugins/interfaces/didplugin.didmanager.html
+++ b/static/references/trinity_plugins/interfaces/didplugin.didmanager.html
@@ -82,6 +82,7 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="didplugin.didmanager.html#servicebuilder" class="tsd-kind-icon">Service<wbr>Builder</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="didplugin.didmanager.html#verifiablecredentialbuilder" class="tsd-kind-icon">Verifiable<wbr>Credential<wbr>Builder</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="didplugin.didmanager.html#verifiablepresentationbuilder" class="tsd-kind-icon">Verifiable<wbr>Presentation<wbr>Builder</a></li>
 							</ul>
@@ -103,6 +104,13 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="servicebuilder" class="tsd-anchor"></a>
+					<h3>Service<wbr>Builder</h3>
+					<div class="tsd-signature tsd-kind-icon">Service<wbr>Builder<span class="tsd-signature-symbol">:</span> <a href="didplugin.servicebuilder.html" class="tsd-signature-type">ServiceBuilder</a></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 					<a name="verifiablecredentialbuilder" class="tsd-anchor"></a>
 					<h3>Verifiable<wbr>Credential<wbr>Builder</h3>
@@ -636,6 +644,9 @@
 						<a href="didplugin.didmanager.html" class="tsd-kind-icon">DIDManager</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="didplugin.didmanager.html#servicebuilder" class="tsd-kind-icon">Service<wbr>Builder</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 								<a href="didplugin.didmanager.html#verifiablecredentialbuilder" class="tsd-kind-icon">Verifiable<wbr>Credential<wbr>Builder</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
@@ -671,6 +682,12 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="didplugin.publickey.html" class="tsd-kind-icon">Public<wbr>Key</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.service.html" class="tsd-kind-icon">Service</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.servicebuilder.html" class="tsd-kind-icon">Service<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="didplugin.verifiablecredential.html" class="tsd-kind-icon">Verifiable<wbr>Credential</a>
