--- a/static/references/trinity_plugins/modules/walletplugin.html
+++ b/static/references/trinity_plugins/modules/walletplugin.html
@@ -85,6 +85,14 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Enumerations</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported"><a href="../enums/walletplugin.crcproposaltrackingtype.html" class="tsd-kind-icon">CRCProposal<wbr>Tracking<wbr>Type</a></li>
+								<li class="tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported"><a href="../enums/walletplugin.crcproposaltype.html" class="tsd-kind-icon">CRCProposal<wbr>Type</a></li>
+								<li class="tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported"><a href="../enums/walletplugin.votetype.html" class="tsd-kind-icon">Vote<wbr>Type</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/walletplugin.walletmanager.html" class="tsd-kind-icon">Wallet<wbr>Manager</a></li>
@@ -146,6 +154,15 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../enums/walletplugin.crcproposaltrackingtype.html" class="tsd-kind-icon">CRCProposal<wbr>Tracking<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../enums/walletplugin.crcproposaltype.html" class="tsd-kind-icon">CRCProposal<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../enums/walletplugin.votetype.html" class="tsd-kind-icon">Vote<wbr>Type</a>
+					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../interfaces/walletplugin.walletmanager.html" class="tsd-kind-icon">Wallet<wbr>Manager</a>
 					</li>
