--- a/static/references/trinity_plugins/enums/walletplugin.crcproposaltype.html
+++ b/static/references/trinity_plugins/enums/walletplugin.crcproposaltype.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DriveType | Trinity Plugins API Reference</title>
+	<title>CRCProposalType | Trinity Plugins API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/hiveplugin.html">HivePlugin</a>
+					<a href="../modules/walletplugin.html">WalletPlugin</a>
 				</li>
 				<li>
-					<a href="hiveplugin.drivetype.html">DriveType</a>
+					<a href="walletplugin.crcproposaltype.html">CRCProposalType</a>
 				</li>
 			</ul>
-			<h1>Enumeration DriveType</h1>
+			<h1>Enumeration CRCProposalType</h1>
 		</div>
 	</div>
 </header>
@@ -74,9 +74,18 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#ipfs" class="tsd-kind-icon">IPFS</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#native" class="tsd-kind-icon">NATIVE</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#onedrive" class="tsd-kind-icon">ONEDRIVE</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#changesponsor" class="tsd-kind-icon">change<wbr>Sponsor</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#closeproposal" class="tsd-kind-icon">close<wbr>Proposal</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#dappconsensus" class="tsd-kind-icon">dapp<wbr>Consensus</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#elip" class="tsd-kind-icon">elip</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#flowelip" class="tsd-kind-icon">flow<wbr>Elip</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#infoelip" class="tsd-kind-icon">info<wbr>Elip</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#mainchainupgradecode" class="tsd-kind-icon">main<wbr>Chain<wbr>Upgrade<wbr>Code</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#maxtype" class="tsd-kind-icon">max<wbr>Type</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#normal" class="tsd-kind-icon">normal</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#registersidechain" class="tsd-kind-icon">register<wbr>Side<wbr>Chain</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#secretarygeneral" class="tsd-kind-icon">secretary<wbr>General</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="walletplugin.crcproposaltype.html#sidechainupgradecode" class="tsd-kind-icon">side<wbr>Chain<wbr>Upgrade<wbr>Code</a></li>
 							</ul>
 						</section>
 					</div>
@@ -85,23 +94,86 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="ipfs" class="tsd-anchor"></a>
-					<h3>IPFS</h3>
-					<div class="tsd-signature tsd-kind-icon">IPFS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<a name="changesponsor" class="tsd-anchor"></a>
+					<h3>change<wbr>Sponsor</h3>
+					<div class="tsd-signature tsd-kind-icon">change<wbr>Sponsor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1025</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="native" class="tsd-anchor"></a>
-					<h3>NATIVE</h3>
-					<div class="tsd-signature tsd-kind-icon">NATIVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+					<a name="closeproposal" class="tsd-anchor"></a>
+					<h3>close<wbr>Proposal</h3>
+					<div class="tsd-signature tsd-kind-icon">close<wbr>Proposal<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1026</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="onedrive" class="tsd-anchor"></a>
-					<h3>ONEDRIVE</h3>
-					<div class="tsd-signature tsd-kind-icon">ONEDRIVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<a name="dappconsensus" class="tsd-anchor"></a>
+					<h3>dapp<wbr>Consensus</h3>
+					<div class="tsd-signature tsd-kind-icon">dapp<wbr>Consensus<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1280</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="elip" class="tsd-anchor"></a>
+					<h3>elip</h3>
+					<div class="tsd-signature tsd-kind-icon">elip<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;256</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="flowelip" class="tsd-anchor"></a>
+					<h3>flow<wbr>Elip</h3>
+					<div class="tsd-signature tsd-kind-icon">flow<wbr>Elip<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;257</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="infoelip" class="tsd-anchor"></a>
+					<h3>info<wbr>Elip</h3>
+					<div class="tsd-signature tsd-kind-icon">info<wbr>Elip<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;258</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="mainchainupgradecode" class="tsd-anchor"></a>
+					<h3>main<wbr>Chain<wbr>Upgrade<wbr>Code</h3>
+					<div class="tsd-signature tsd-kind-icon">main<wbr>Chain<wbr>Upgrade<wbr>Code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;512</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="maxtype" class="tsd-anchor"></a>
+					<h3>max<wbr>Type</h3>
+					<div class="tsd-signature tsd-kind-icon">max<wbr>Type<span class="tsd-signature-symbol">:</span> </div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="normal" class="tsd-anchor"></a>
+					<h3>normal</h3>
+					<div class="tsd-signature tsd-kind-icon">normal<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="registersidechain" class="tsd-anchor"></a>
+					<h3>register<wbr>Side<wbr>Chain</h3>
+					<div class="tsd-signature tsd-kind-icon">register<wbr>Side<wbr>Chain<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;769</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="secretarygeneral" class="tsd-anchor"></a>
+					<h3>secretary<wbr>General</h3>
+					<div class="tsd-signature tsd-kind-icon">secretary<wbr>General<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1024</span></div>
+					<aside class="tsd-sources">
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="sidechainupgradecode" class="tsd-anchor"></a>
+					<h3>side<wbr>Chain<wbr>Upgrade<wbr>Code</h3>
+					<div class="tsd-signature tsd-kind-icon">side<wbr>Chain<wbr>Upgrade<wbr>Code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;768</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -146,66 +218,72 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
 					</li>
-					<li class="current tsd-kind-module tsd-is-not-exported">
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
-					<li class=" tsd-kind-module tsd-is-not-exported">
+					<li class="current tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/walletplugin.html">Wallet<wbr>Plugin</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="walletplugin.crcproposaltrackingtype.html" class="tsd-kind-icon">CRCProposal<wbr>Tracking<wbr>Type</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="hiveplugin.drivetype.html" class="tsd-kind-icon">Drive<wbr>Type</a>
+						<a href="walletplugin.crcproposaltype.html" class="tsd-kind-icon">CRCProposal<wbr>Type</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#ipfs" class="tsd-kind-icon">IPFS</a>
+								<a href="walletplugin.crcproposaltype.html#changesponsor" class="tsd-kind-icon">change<wbr>Sponsor</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#native" class="tsd-kind-icon">NATIVE</a>
+								<a href="walletplugin.crcproposaltype.html#closeproposal" class="tsd-kind-icon">close<wbr>Proposal</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#onedrive" class="tsd-kind-icon">ONEDRIVE</a>
+								<a href="walletplugin.crcproposaltype.html#dappconsensus" class="tsd-kind-icon">dapp<wbr>Consensus</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#elip" class="tsd-kind-icon">elip</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#flowelip" class="tsd-kind-icon">flow<wbr>Elip</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#infoelip" class="tsd-kind-icon">info<wbr>Elip</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#mainchainupgradecode" class="tsd-kind-icon">main<wbr>Chain<wbr>Upgrade<wbr>Code</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#maxtype" class="tsd-kind-icon">max<wbr>Type</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#normal" class="tsd-kind-icon">normal</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#registersidechain" class="tsd-kind-icon">register<wbr>Side<wbr>Chain</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#secretarygeneral" class="tsd-kind-icon">secretary<wbr>General</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="walletplugin.crcproposaltype.html#sidechainupgradecode" class="tsd-kind-icon">side<wbr>Chain<wbr>Upgrade<wbr>Code</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../classes/hiveplugin.clientcreationoptions.html" class="tsd-kind-icon">Client<wbr>Creation<wbr>Options</a>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="walletplugin.votetype.html" class="tsd-kind-icon">Vote<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.client.html" class="tsd-kind-icon">Client</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.files.html" class="tsd-kind-icon">Files</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.hivemanager.html" class="tsd-kind-icon">Hive<wbr>Manager</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.ipfs.html" class="tsd-kind-icon">IPFS</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.ipfsclientcreationoptions.html" class="tsd-kind-icon">IPFSClient<wbr>Creation<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.keyvalues.html" class="tsd-kind-icon">Key<wbr>Values</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.onedriveclientcreationoptions.html" class="tsd-kind-icon">One<wbr>Drive<wbr>Client<wbr>Creation<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/hiveplugin.html#int" class="tsd-kind-icon">Int</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter tsd-is-not-exported">
-						<a href="../modules/hiveplugin.html#opaque" class="tsd-kind-icon">Opaque</a>
+						<a href="../interfaces/walletplugin.walletmanager.html" class="tsd-kind-icon">Wallet<wbr>Manager</a>
 					</li>
 				</ul>
 			</nav>
