--- a/static/references/trinity_plugins/interfaces/carrierplugin.carrier.html
+++ b/static/references/trinity_plugins/interfaces/carrierplugin.carrier.html
@@ -729,7 +729,7 @@
 					<a name="groupjoin" class="tsd-anchor"></a>
 					<h3>group<wbr>Join</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">group<wbr>Join<span class="tsd-signature-symbol">(</span>friendId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, cookieCode<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, callbacks<span class="tsd-signature-symbol">: </span><a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-signature-type">GroupCallbacks</a>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">group<wbr>Join<span class="tsd-signature-symbol">(</span>friendId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, cookieCode<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -754,9 +754,6 @@
 									<div class="tsd-comment tsd-typography">
 										<p>The cookieCode information to join group,from onGroupInvite.</p>
 									</div>
-								</li>
-								<li>
-									<h5>callbacks: <a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-signature-type">GroupCallbacks</a></h5>
 								</li>
 								<li>
 									<h5>onSuccess: <span class="tsd-signature-type">function</span></h5>
@@ -1287,7 +1284,7 @@
 					<a name="newgroup" class="tsd-anchor"></a>
 					<h3>new<wbr>Group</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">new<wbr>Group<span class="tsd-signature-symbol">(</span>callbacks<span class="tsd-signature-symbol">: </span><a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-signature-type">GroupCallbacks</a>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">new<wbr>Group<span class="tsd-signature-symbol">(</span>onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -1301,9 +1298,6 @@
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
-								<li>
-									<h5>callbacks: <a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-signature-type">GroupCallbacks</a></h5>
-								</li>
 								<li>
 									<h5>onSuccess: <span class="tsd-signature-type">function</span></h5>
 									<div class="tsd-comment tsd-typography">
