--- a/static/references/trinity_plugins/interfaces/didplugin.servicebuilder.html
+++ b/static/references/trinity_plugins/interfaces/didplugin.servicebuilder.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DriveType | Trinity Plugins API Reference</title>
+	<title>ServiceBuilder | Trinity Plugins API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,56 +54,82 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/hiveplugin.html">HivePlugin</a>
+					<a href="../modules/didplugin.html">DIDPlugin</a>
 				</li>
 				<li>
-					<a href="hiveplugin.drivetype.html">DriveType</a>
+					<a href="didplugin.servicebuilder.html">ServiceBuilder</a>
 				</li>
 			</ul>
-			<h1>Enumeration DriveType</h1>
+			<h1>Interface ServiceBuilder</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">ServiceBuilder</span>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-not-exported">
-							<h3>Enumeration members</h3>
+							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#ipfs" class="tsd-kind-icon">IPFS</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#native" class="tsd-kind-icon">NATIVE</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="hiveplugin.drivetype.html#onedrive" class="tsd-kind-icon">ONEDRIVE</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported"><a href="didplugin.servicebuilder.html#createservice" class="tsd-kind-icon">create<wbr>Service</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="ipfs" class="tsd-anchor"></a>
-					<h3>IPFS</h3>
-					<div class="tsd-signature tsd-kind-icon">IPFS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
-					<aside class="tsd-sources">
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="native" class="tsd-anchor"></a>
-					<h3>NATIVE</h3>
-					<div class="tsd-signature tsd-kind-icon">NATIVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
-					<aside class="tsd-sources">
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="onedrive" class="tsd-anchor"></a>
-					<h3>ONEDRIVE</h3>
-					<div class="tsd-signature tsd-kind-icon">ONEDRIVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
-					<aside class="tsd-sources">
-					</aside>
+				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="createservice" class="tsd-anchor"></a>
+					<h3>create<wbr>Service</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Service<span class="tsd-signature-symbol">(</span>id<span class="tsd-signature-symbol">: </span><a href="../modules/didplugin.html#didurl" class="tsd-signature-type">DIDURL</a>, type<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, endpoint<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="didplugin.service.html" class="tsd-signature-type">Service</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Creates a new Service object with the given properties.
+									All fields are mandatory.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>id: <a href="../modules/didplugin.html#didurl" class="tsd-signature-type">DIDURL</a></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>Unique identifier for this service. Usually use a short form DIDURL such as &quot;#myservicename&quot;</p>
+									</div>
+								</li>
+								<li>
+									<h5>type: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>Application specific string that identities your type of service.</p>
+									</div>
+								</li>
+								<li>
+									<h5>endpoint: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>HTTP address or any other network protocol based endpoint that can be used to communicate with the service.</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="didplugin.service.html" class="tsd-signature-type">Service</a></h4>
+						</li>
+					</ul>
 				</section>
 			</section>
 		</div>
@@ -140,13 +166,13 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/cordovanetworkinfoplugin.html">Cordova<wbr>Network<wbr>Info<wbr>Plugin</a>
 					</li>
-					<li class=" tsd-kind-module tsd-is-not-exported">
+					<li class="current tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
 					</li>
-					<li class="current tsd-kind-module tsd-is-not-exported">
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
@@ -159,53 +185,68 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../enums/didplugin.didstorefilter.html" class="tsd-kind-icon">DIDStore<wbr>Filter</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../enums/didplugin.mnemoniclanguage.html" class="tsd-kind-icon">Mnemonic<wbr>Language</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.did.html" class="tsd-kind-icon">DID</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.diddocument.html" class="tsd-kind-icon">DIDDocument</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.didmanager.html" class="tsd-kind-icon">DIDManager</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.didstore.html" class="tsd-kind-icon">DIDStore</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.publickey.html" class="tsd-kind-icon">Public<wbr>Key</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.service.html" class="tsd-kind-icon">Service</a>
+					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="hiveplugin.drivetype.html" class="tsd-kind-icon">Drive<wbr>Type</a>
+					<li class="current tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.servicebuilder.html" class="tsd-kind-icon">Service<wbr>Builder</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#ipfs" class="tsd-kind-icon">IPFS</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#native" class="tsd-kind-icon">NATIVE</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="hiveplugin.drivetype.html#onedrive" class="tsd-kind-icon">ONEDRIVE</a>
+							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="didplugin.servicebuilder.html#createservice" class="tsd-kind-icon">create<wbr>Service</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../classes/hiveplugin.clientcreationoptions.html" class="tsd-kind-icon">Client<wbr>Creation<wbr>Options</a>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.verifiablecredential.html" class="tsd-kind-icon">Verifiable<wbr>Credential</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.client.html" class="tsd-kind-icon">Client</a>
+						<a href="didplugin.verifiablecredentialbuilder.html" class="tsd-kind-icon">Verifiable<wbr>Credential<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.files.html" class="tsd-kind-icon">Files</a>
+						<a href="didplugin.verifiablepresentation.html" class="tsd-kind-icon">Verifiable<wbr>Presentation</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.hivemanager.html" class="tsd-kind-icon">Hive<wbr>Manager</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.ipfs.html" class="tsd-kind-icon">IPFS</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.ipfsclientcreationoptions.html" class="tsd-kind-icon">IPFSClient<wbr>Creation<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.keyvalues.html" class="tsd-kind-icon">Key<wbr>Values</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/hiveplugin.onedriveclientcreationoptions.html" class="tsd-kind-icon">One<wbr>Drive<wbr>Client<wbr>Creation<wbr>Options</a>
+						<a href="didplugin.verifiablepresentationbuilder.html" class="tsd-kind-icon">Verifiable<wbr>Presentation<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/hiveplugin.html#int" class="tsd-kind-icon">Int</a>
+						<a href="../modules/didplugin.html#base58publickey" class="tsd-kind-icon">Base58<wbr>Public<wbr>Key</a>
 					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter tsd-is-not-exported">
-						<a href="../modules/hiveplugin.html#opaque" class="tsd-kind-icon">Opaque</a>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../modules/didplugin.html#credentialid" class="tsd-kind-icon">CredentialID</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../modules/didplugin.html#didstring" class="tsd-kind-icon">DIDString</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../modules/didplugin.html#didurl" class="tsd-kind-icon">DIDURL</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../modules/didplugin.html#oncreateidtransaction" class="tsd-kind-icon">On<wbr>Create<wbr>IdTransaction</a>
 					</li>
 				</ul>
 			</nav>
