--- a/static/references/trinity_plugins/interfaces/didplugin.verifiablecredentialbuilder.html
+++ b/static/references/trinity_plugins/interfaces/didplugin.verifiablecredentialbuilder.html
@@ -186,6 +186,12 @@
 						<a href="didplugin.publickey.html" class="tsd-kind-icon">Public<wbr>Key</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.service.html" class="tsd-kind-icon">Service</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="didplugin.servicebuilder.html" class="tsd-kind-icon">Service<wbr>Builder</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="didplugin.verifiablecredential.html" class="tsd-kind-icon">Verifiable<wbr>Credential</a>
 					</li>
 				</ul>
