--- a/static/references/trinity_plugins/interfaces/hiveplugin.hivemanager.html
+++ b/static/references/trinity_plugins/interfaces/hiveplugin.hivemanager.html
@@ -96,7 +96,7 @@
 					<a name="createclient" class="tsd-anchor"></a>
 					<h3>create<wbr>Client</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Client<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">: </span><a href="../classes/hiveplugin.clientcreationoptions.html" class="tsd-signature-type">ClientCreationOptions</a>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Client<span class="tsd-signature-symbol">(</span>handler<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Function</span>, options<span class="tsd-signature-symbol">: </span><a href="../classes/hiveplugin.clientcreationoptions.html" class="tsd-signature-type">ClientCreationOptions</a>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -104,6 +104,9 @@
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
+								<li>
+									<h5>handler: <span class="tsd-signature-type">Function</span></h5>
+								</li>
 								<li>
 									<h5>options: <a href="../classes/hiveplugin.clientcreationoptions.html" class="tsd-signature-type">ClientCreationOptions</a></h5>
 								</li>
@@ -294,13 +297,7 @@
 						<a href="hiveplugin.client.html" class="tsd-kind-icon">Client</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="hiveplugin.directory.html" class="tsd-kind-icon">Directory</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="hiveplugin.drive.html" class="tsd-kind-icon">Drive</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="hiveplugin.file.html" class="tsd-kind-icon">File</a>
+						<a href="hiveplugin.files.html" class="tsd-kind-icon">Files</a>
 					</li>
 				</ul>
 				<ul class="current">
@@ -321,7 +318,13 @@
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="hiveplugin.ipfs.html" class="tsd-kind-icon">IPFS</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="hiveplugin.ipfsclientcreationoptions.html" class="tsd-kind-icon">IPFSClient<wbr>Creation<wbr>Options</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="hiveplugin.keyvalues.html" class="tsd-kind-icon">Key<wbr>Values</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="hiveplugin.onedriveclientcreationoptions.html" class="tsd-kind-icon">One<wbr>Drive<wbr>Client<wbr>Creation<wbr>Options</a>
