--- a/static/references/trinity_plugins/modules/didplugin.html
+++ b/static/references/trinity_plugins/modules/didplugin.html
@@ -67,16 +67,16 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This is about DID which is a new type of identifier to provide verifiable,
-							decentralized digital identity.
-							<br><br>
-							Please use &#39;DIDPlugin&#39; as the plugin name in the manifest.json if you want to use
-							this facility.
-							<br><br>
-							Usage:
-							<br>
-						declare let didManager: DIDPlugin.DIDManager;</p>
+						<p>This plugin is the Elastos implementation of W3C&#39;s Decentralized Identity specification.
+							Decentralized identities allow users to be owner of their identities, without relying on third party
+						providers.</p>
 					</div>
+					<p><br><br>
+						Add &#39;DIDPlugin&#39; as plugin name in your manifest.json in order to request permission to use this plugin.
+						<br><br>
+						Declaration:
+						<br>
+					declare let didManager: DIDPlugin.DIDManager;</p>
 				</div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -98,6 +98,8 @@
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.didmanager.html" class="tsd-kind-icon">DIDManager</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.didstore.html" class="tsd-kind-icon">DIDStore</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.publickey.html" class="tsd-kind-icon">Public<wbr>Key</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.service.html" class="tsd-kind-icon">Service</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.servicebuilder.html" class="tsd-kind-icon">Service<wbr>Builder</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.verifiablecredential.html" class="tsd-kind-icon">Verifiable<wbr>Credential</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.verifiablecredentialbuilder.html" class="tsd-kind-icon">Verifiable<wbr>Credential<wbr>Builder</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/didplugin.verifiablepresentation.html" class="tsd-kind-icon">Verifiable<wbr>Presentation</a></li>
@@ -166,8 +168,9 @@
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>A DIDURL is a DIDString with an additional fragment part.
-							Ex: did:elastos:abcdef#my-special-use or #my-special-use</p>
+							Ex: did:elastos:abcdef#my-special-use or #my-special-use.</p>
 						</div>
+						<p>For simplicity, generally use the short form only.</p>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
@@ -291,6 +294,12 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../interfaces/didplugin.publickey.html" class="tsd-kind-icon">Public<wbr>Key</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../interfaces/didplugin.service.html" class="tsd-kind-icon">Service</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../interfaces/didplugin.servicebuilder.html" class="tsd-kind-icon">Service<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../interfaces/didplugin.verifiablecredential.html" class="tsd-kind-icon">Verifiable<wbr>Credential</a>
